# nightVisual

./: README.md
nightVisual_cpp/: .gitignore  CMakeLists.txt
nightVisual_cpp/example/: CMakeLists.txt  main.cc
nightVisual_cpp/include/: nightVisual.hh
nightVisual_cpp/src/: nightVisual.cc
nightVisual_go/: go.mod  main.go  nightVisual.go
nightVisual_go/example/: main.go
nightVisual_rust/: Cargo.toml  README.md
nightVisual_rust/src/: lib.rs  night_visual.rs
nightVisual_rust/src/image/: image.rs  mod.rs  pixels.rs  rgba_pixel.rs
nightVisual_rust/src/video/: mod.rs
nightVisual_rust/tests/: image.rs
